--- a/roles/localhost/tasks/serviceAccount.yml
+++ b/roles/localhost/tasks/serviceAccount.yml
@@ -14,12 +14,18 @@
   with_items:      
     - "{{ serviceAccount_path }}"
 
-- name: serviceAccount cert      
+- name: ca cert      
   tags: ca
-  openssl_certificate:
-    path: "{{ item }}/ca.pem"
-    privatekey_path: "{{ item }}/key.pem"
-    csr_path: "{{ item }}/ca.csr"
-    provider: selfsigned
+  shell: if [ -f {{ item }}/ca.pem ];then exit;else  openssl x509 -req -days 3650 -in {{ item }}/ca.csr -signkey {{ item }}/key.pem -out {{ item }}/ca.pem; fi
   with_items:      
     - "{{ serviceAccount_path }}"
+
+#- name: serviceAccount cert      
+#  tags: ca
+#  openssl_certificate:
+#    path: "{{ item }}/ca.pem"
+#    privatekey_path: "{{ item }}/key.pem"
+#    csr_path: "{{ item }}/ca.csr"
+#    provider: selfsigned
+#  with_items:      
+#    - "{{ serviceAccount_path }}"
