--- a/roles/localhost/tasks/apiserver_client_certs_controller.yml
+++ b/roles/localhost/tasks/apiserver_client_certs_controller.yml
@@ -20,12 +20,13 @@
     path: "{{ apiserver_client_certs_controller }}/{{ item }}/cert.csr"
     privatekey_path: "{{ apiserver_client_certs_controller }}/{{ item }}/key.pem"
     common_name: "system:kube-controller-manager"
+    organization_name: "system:masters"
   with_items:      
     - "{{ groups['controller'] }}"
 
 # this task will always generate new certs to cover previous certs
 - name: apiserver client controller cert
   tags: cert
-  shell: openssl x509 -req -days 365 -in {{ apiserver_client_certs_controller }}/{{ item }}/cert.csr -CA {{ ca_path }}/ca.pem  -CAkey {{ ca_path }}/key.pem -CAcreateserial -out {{ apiserver_client_certs_controller }}/{{ item }}/cert.pem
+  shell: if [ -f {{ apiserver_client_certs_controller }}/{{ item }}/cert.pem ];then exit; else openssl x509 -req -days 365 -in {{ apiserver_client_certs_controller }}/{{ item }}/cert.csr -CA {{ ca_path }}/ca.pem -CAkey {{ ca_path }}/key.pem -CAcreateserial -out {{ apiserver_client_certs_controller }}/{{ item }}/cert.pem;fi 
   with_items:      
     - "{{ groups['controller'] }}"
