--- a/roles/localhost/tasks/apiserver_client_certs_scheduler.yml
+++ b/roles/localhost/tasks/apiserver_client_certs_scheduler.yml
@@ -20,12 +20,20 @@
     path: "{{ apiserver_client_certs_scheduler }}/{{ item }}/cert.csr"
     privatekey_path: "{{ apiserver_client_certs_scheduler }}/{{ item }}/key.pem"
     common_name: "system:kube-scheduler"
+    organization_name: "system:masters"
+  with_items:      
+    - "{{ groups['scheduler'] }}"
+
+- name: apiserver req extensions  
+  template:
+    src: extention.conf.j2
+    dest: "{{ apiserver_client_certs_scheduler }}/{{ item }}/extention.conf"
   with_items:      
     - "{{ groups['scheduler'] }}"
 
 # this task will always generate new certs to cover previous certs
 - name: apiserver client scheduler cert
   tags: cert
-  shell: openssl x509 -req -days 365 -in {{ apiserver_client_certs_scheduler }}/{{ item }}/cert.csr -CA {{ ca_path }}/ca.pem  -CAkey {{ ca_path }}/key.pem -CAcreateserial -out {{ apiserver_client_certs_scheduler }}/{{ item }}/cert.pem
+  shell: if [ -f {{ apiserver_client_certs_scheduler }}/{{ item }}/cert.pem ];then exit;else  openssl x509 -req -days 365 -in {{ apiserver_client_certs_scheduler }}/{{ item }}/cert.csr -CA {{ ca_path }}/ca.pem  -CAkey {{ ca_path }}/key.pem -CAcreateserial -out {{ apiserver_client_certs_scheduler }}/{{ item }}/cert.pem -extensions v3_ca -extfile {{ apiserver_client_certs_scheduler }}/{{ item }}/extention.conf;fi
   with_items:      
     - "{{ groups['scheduler'] }}"
