--- a/roles/localhost/tasks/etcd_server_cert.yml
+++ b/roles/localhost/tasks/etcd_server_cert.yml
@@ -19,13 +19,21 @@
     path: "{{ etcd_server_certs_path }}/{{ item }}/cert.csr"
     privatekey_path: "{{ etcd_server_certs_path }}/{{ item }}/key.pem"
     common_name: "{{ item }}"
+    subject_alt_name: "IP:{{ item }}"
   with_items:      
     - "{{ groups['etcd_server'] }}"
+
+- name: etcd client req extensions  
+  template:
+    src: extention.conf.j2
+    dest: "{{ etcd_client_certs_path }}/{{ item }}/extention.conf"
+  with_items:      
+    - "{{ groups['etcd_client'] }}"
 
 # this task will always generate new certs to cover previous certs
 - name: etcd client cert
   tags: cert
-  shell: openssl x509 -req -days 365 -in {{ etcd_server_certs_path }}/{{ item }}/cert.csr -CA {{ ca_path }}/ca.pem  -CAkey {{ ca_path }}/key.pem -CAcreateserial -out {{ etcd_server_certs_path }}/{{ item }}/cert.pem
+  shell: if [ -f {{ etcd_server_certs_path }}/{{ item }}/cert.pem ];then exit;else openssl x509 -req -days 365 -in {{ etcd_server_certs_path }}/{{ item }}/cert.csr -CA {{ ca_path }}/ca.pem  -CAkey {{ ca_path }}/key.pem -CAcreateserial -out {{ etcd_server_certs_path }}/{{ item }}/cert.pem  -extensions v3_ca -extensions v3_ca -extfile {{ etcd_client_certs_path }}/{{ item }}/extention.conf; fi
   with_items:      
     - "{{ groups['etcd_server'] }}"
 
